# bsars_web

./: LICENSE  README.md  models.py  pyproject.toml  requirements.txt  wsgi.py
static/: about.html  blog_list.html  contact.html  equipment.html  index.html  testimonial.html
templates/: about.html  arrivals_section.html  base.html  blog_list.html  blog_post.html  contact.html  equipment.html  index.html  navbar.html  testimonial.html
